[gd_scene load_steps=3 format=3 uid="uid://chpimhputo4rs"]

[ext_resource type="Script" path="res://src/chat/config/CustomCommand.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/chat/config/RegexTester.tscn" id="2"]

[node name="CustomCommand" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBox/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "CommandName"

[node name="Response" type="Label" parent="VBox/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
max_lines_visible = 2

[node name="Timeout" type="Label" parent="VBox/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="UserTimeout" type="Label" parent="VBox/HBox"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Permission" type="Label" parent="VBox/HBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "None"

[node name="Control" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="Delete" type="Button" parent="VBox/HBox/CenterContainer"]
layout_mode = 2
text = "Delete"

[node name="Control2" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="Edit" type="Button" parent="VBox/HBox/CenterContainer2"]
layout_mode = 2
text = "Edit"

[node name="TabBar" type="TabContainer" parent="VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
use_hidden_tabs_for_min_size = true

[node name="Settings" type="VBoxContainer" parent="VBox/TabBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox/TabBar/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TabBar/Settings/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Command Name:"

[node name="CommandName" type="LineEdit" parent="VBox/TabBar/Settings/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox2" type="HBoxContainer" parent="VBox/TabBar/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TabBar/Settings/HBox2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "User Level:"

[node name="UserLevel" type="OptionButton" parent="VBox/TabBar/Settings/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "Everyone"
popup/item_0/id = 0
popup/item_1/text = "Subscriber"
popup/item_1/id = 1
popup/item_2/text = "VIP"
popup/item_2/id = 2
popup/item_3/text = "Moderator"
popup/item_3/id = 3
popup/item_4/text = "Broadcaster"
popup/item_4/id = 4

[node name="HBox3" type="HBoxContainer" parent="VBox/TabBar/Settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/TabBar/Settings/HBox3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Response:"

[node name="Response" type="TextEdit" parent="VBox/TabBar/Settings/HBox3"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1

[node name="Label2" type="Label" parent="VBox/TabBar/Settings/HBox3"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_vertical = 3
text = "500"

[node name="Advanced" type="VBoxContainer" parent="VBox/TabBar"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox/TabBar/Advanced"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/TabBar/Advanced/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/TabBar/Advanced/HBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Global Cooldown:"

[node name="GlobalCooldown" type="SpinBox" parent="VBox/TabBar/Advanced/HBox/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1e+06
suffix = "sec."

[node name="HBox2" type="HBoxContainer" parent="VBox/TabBar/Advanced/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/TabBar/Advanced/HBox/HBox2"]
layout_mode = 2
text = "User Cooldown:"

[node name="UserCooldown" type="SpinBox" parent="VBox/TabBar/Advanced/HBox/HBox2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1e+06
suffix = "sec."

[node name="HBox2" type="HBoxContainer" parent="VBox/TabBar/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TabBar/Advanced/HBox2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Aliases:"

[node name="Aliases" type="LineEdit" parent="VBox/TabBar/Advanced/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter aliases for this command (comma-separated)"

[node name="HBox3" type="HBoxContainer" parent="VBox/TabBar/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TabBar/Advanced/HBox3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Keywords:"

[node name="Keywords" type="LineEdit" parent="VBox/TabBar/Advanced/HBox3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter keywords for this command (comma-separated)"

[node name="HBox4" type="HBoxContainer" parent="VBox/TabBar/Advanced"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TabBar/Advanced/HBox4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "RegEx:"

[node name="RegEx" type="LineEdit" parent="VBox/TabBar/Advanced/HBox4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "RegEx"
max_length = 100

[node name="Label2" type="Label" parent="VBox/TabBar/Advanced/HBox4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
text = "100"

[node name="Test" type="Button" parent="VBox/TabBar/Advanced/HBox4"]
layout_mode = 2
text = "Test"

[node name="RegexTester" parent="." instance=ExtResource("2")]
visible = false

[connection signal="pressed" from="VBox/HBox/CenterContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="VBox/HBox/CenterContainer2/Edit" to="." method="_on_Edit_pressed"]
[connection signal="text_changed" from="VBox/TabBar/Settings/HBox/CommandName" to="." method="_on_CommandName_text_changed"]
[connection signal="item_selected" from="VBox/TabBar/Settings/HBox2/UserLevel" to="." method="_on_UserLevel_item_selected"]
[connection signal="text_changed" from="VBox/TabBar/Settings/HBox3/Response" to="." method="_on_Response_text_changed"]
[connection signal="text_changed" from="VBox/TabBar/Advanced/HBox4/RegEx" to="." method="_on_RegEx_text_changed"]
[connection signal="pressed" from="VBox/TabBar/Advanced/HBox4/Test" to="." method="_on_Test_pressed"]
[connection signal="popup_hide" from="RegexTester" to="." method="_on_RegexTester_popup_hide"]
